service-mesh-log/manifests/greeter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: kevinjohn971/greeter:5.3
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: kevinjohn971/greeter:5.3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: greeter
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v1
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-v2
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: greeter
    version: v2
  ports:
    - name: http
      port: 80
      targetPort: 8080
